--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -30,7 +30,7 @@
     <!-- Jenkins Plugin Dependencies Versions -->
     <plugin-util-api.version>1.2.2</plugin-util-api.version>
     <data-tables-api.version>1.10.21-2</data-tables-api.version>
-    <forensics-api-plugin.version>0.7.1-rc528.f533b61f0fd2</forensics-api-plugin.version>
+    <forensics-api-plugin.version>0.8.0-SNAPSHOT</forensics-api-plugin.version>
 
     <git-plugin.version>4.2.2</git-plugin.version>
     <git-client.version>3.2.1</git-client.version>
