--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -30,7 +30,7 @@
     <!-- Jenkins Plugin Dependencies Versions -->
     <plugin-util-api.version>1.2.2</plugin-util-api.version>
     <data-tables-api.version>1.10.20-13</data-tables-api.version>
-    <forensics-api-plugin.version>0.7.0</forensics-api-plugin.version>
+    <forensics-api-plugin.version>0.8.0-rc557.86c728712abb</forensics-api-plugin.version>
 
     <git-plugin.version>4.2.2</git-plugin.version>
     <git-client.version>3.2.1</git-client.version>
