--- a/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
+++ b/plugin/src/main/resources/io/jenkins/plugins/forensics/git/reference/GitReferenceRecorder/config.properties
@@ -1,19 +1,16 @@
-title.maxCommits=Maximal Commits
-description.maxCommits=Declares how many git commits the reference finder will look into the past to find an intersection. \
-  (If the last master commit on a branch is further behind than n commits, then the reference finder will stop searching and \
-  will say that it didn't find any intersection)
-
 title.referenceJob=Reference Job
-description.referenceJob=The reference job is the baseline that is used to determine which of the issues in the current \
-    build are new, outstanding, or fixed. This baseline is also used to determine the number of new issues for the \
-    quality gate evaluation.
+description.referenceJob=A reference job defines the baseline for tools that want to create relative build reports.
 
-title.skipUnknownCommits=Skip builds with unknown commits
-description.skipUnknownCommits=Since its possible for a build to be based on more than one new commits and also its \
-    possible to checkout every revision this option (if checked) will assure that builds of the reference branch with \
-    unknown commits to the current branch will be ignored while finding the reference point. Disabled by default.
+title.maxCommits=#Commits
+description.maxCommits=Defines how many commits of a job's Git history should be evaluated to find the reference build.
 
-title.newestBuildIfNotFound=Use newest build of reference job if no intersection is found
-description.newestBuildIfNotFound=If there are no common commits between the current branch and the reference branch \
-    looking at the last x commits where x the amount of Maximal Commits, then the newest build of the reference job \
-    will be used as reference. Disabled by default.
+title.defaultBranch=Default Branch
+description.defaultBranch=The default branch to use as reference job for multi-branch pipelines. If empty then `master` \
+   will be used.
+
+title.skipUnknownCommits=Skip unknown commits
+description.skipUnknownCommits=Ignore possible reference builds that contain commits that are not part of the current \
+  build.
+
+title.latestBuildIfNotFound=Fallback to latest build
+description.latestBuildIfNotFound=If no reference build is found, then the latest build of the reference job will be used.
