--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -161,7 +161,7 @@
           <environmentVariables>
             <PLUGINS_DIR>../plugin/target/test-classes/test-dependencies</PLUGINS_DIR>
             <JENKINS_VERSION>${jenkins.version}</JENKINS_VERSION>
-            <BROWSER>firefox</BROWSER>
+            <BROWSER>firefox-container</BROWSER>
           </environmentVariables>
         </configuration>
       </plugin>
