--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -65,6 +65,16 @@
         <artifactId>jackson2-api</artifactId>
         <version>2.11.1</version>
       </dependency>
+      <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>credentials</artifactId>
+        <version>2.3.12</version>
+      </dependency>
+      <dependency>
+        <groupId>org.jenkins-ci.plugins</groupId>
+        <artifactId>script-security</artifactId>
+        <version>1.74</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
