--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -30,11 +30,13 @@
     <!-- Jenkins Plugin Dependencies Versions -->
     <plugin-util-api.version>1.2.5</plugin-util-api.version>
     <data-tables-api.version>1.10.21-2</data-tables-api.version>
-    <forensics-api-plugin.version>0.8.0-rc678.b67f1e9dbc17</forensics-api-plugin.version>
+    <forensics-api-plugin.version>0.8.0-rc683.b8db469e46fd</forensics-api-plugin.version>
 
     <git-plugin.version>4.4.3</git-plugin.version>
     <git-client.version>3.5.0</git-client.version>
     <scm-api.version>2.6.3</scm-api.version>
+    <j2html.version>1.4.0</j2html.version>
+    <streamex.version>0.7.3</streamex.version>
 
   </properties>
 
@@ -99,8 +101,14 @@
     <dependency>
       <groupId>one.util</groupId>
       <artifactId>streamex</artifactId>
-      <version>0.7.3</version>
+      <version>${streamex.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.j2html</groupId>
+      <artifactId>j2html</artifactId>
+      <version>${j2html.version}</version>
+    </dependency>
+
     <!-- Jenkins Plugin Dependencies -->
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
