--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -82,6 +82,11 @@
         <artifactId>echarts-api</artifactId>
         <version>4.9.0-3</version>
       </dependency>
+      <dependency>
+        <groupId>io.jenkins.plugins</groupId>
+        <artifactId>bootstrap4-api</artifactId>
+        <version>4.5.3-2</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
