--- a/ui-tests/pom.xml
+++ b/ui-tests/pom.xml
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>org.jenkins-ci</groupId>
       <artifactId>acceptance-test-harness</artifactId>
-      <version>1.82</version>
+      <version>1.84-20210202.120055-1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
