--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>io.jenkins.plugins</groupId>
   <artifactId>git-forensics</artifactId>
-  <version>3.2.0</version>
+  <version>3.3.0-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <name>Git Forensics Plugin</name>
 
@@ -36,7 +36,7 @@
     <connection>scm:git:https://github.com/jenkinsci/${project.artifactId}-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/${project.artifactId}-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
-    <tag>v3.2.0</tag>
+    <tag>v1.6.0</tag>
   </scm>
 
   <properties>
