--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -197,6 +197,24 @@
                 </item>
               </differences>
             </revapi.differences>
+            <revapi.filter>
+              <elements>
+                <exclude combine.children="append">
+                  <item>
+                    <matcher>java-package</matcher>
+                    <match>/org\.eclipse(\..*)?/</match>
+                  </item>
+                  <item>
+                    <matcher>java-package</matcher>
+                    <match>/org\.jenkinsci\.plugins\.gitclient(\..*)?/</match>
+                  </item>
+                  <item>
+                    <matcher>java-package</matcher>
+                    <match>/io\.jenkins\.plugins\.forensics(\..*)?/</match>
+                  </item>
+                </exclude>
+              </elements>
+            </revapi.filter>
           </analysisConfiguration>
         </configuration>
       </plugin>
