--- a/.github/workflows/quality-monitor-jenkins.yml
+++ b/.github/workflows/quality-monitor-jenkins.yml
@@ -56,8 +56,20 @@ jobs:
                 "tools": [
                   {
                     "id": "junit",
-                    "name": "JUnit Tests",
-                    "pattern": "**/target/*-reports/TEST*.xml"
+                    "name": "Unit Tests",
+                    "pattern": "**/target/surefire-reports/TEST*prism*.xml"
+                  },
+                  {
+                    "id": "junit",
+                    "icon": "rocket",
+                    "name": "Integration tests",
+                    "pattern": "**/target/failsafe-reports/TEST*.xml"
+                  },
+                  {
+                    "id": "junit",
+                    "icon": "no_entry",
+                    "name": "Architecture tests",
+                    "pattern": "**/target/surefire-reports/TEST*archunit*.xml"
                   }
                 ]
               },
@@ -85,22 +97,6 @@ jobs:
                       "id": "spotbugs",
                       "sourcePath": "src/main/java",
                       "pattern": "**/target/spotbugsXml.xml"
-                    },
-                    {
-                      "id": "error-prone",
-                      "pattern": "**/maven.log"
-                    }
-                  ]
-                },
-                {
-                  "name": "API Problems",
-                  "id": "api",
-                  "icon": "no_entry_sign",
-                  "tools": [
-                    {
-                      "id": "revapi",
-                      "sourcePath": "src/main/java",
-                      "pattern": "**/target/revapi-result.json"
                     }
                   ]
                 },
